--- a/config.toml
+++ b/config.toml
@@ -1,19 +1,24 @@
 baseurl = "/"
-title = "Mainroad"
+title = "Savvy Blogs"
+copyright = "&copy; 2019 Savvy"
 languageCode = "en-us"
 paginate = "10" # Number of posts per page
 theme = "Mainroad"
 disqusShortname = "" # Enable comments by entering your Disqus shortname
 googleAnalytics = "" # Enable Google Analytics by entering your tracking id
 
+#Ignore files 
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
+
+
 [Author]
-  name = "John Doe"
-  bio = "John Doe's true identity is unknown. Maybe he is a successful blogger or writer. Nobody knows it."
+  name = "Savithri Rajaraman  "
+  bio = "Data Science Blogger"
   avatar = "img/avatar.png"
 
 [Params]
-  subtitle = "Just another site" # Subtitle of your site
-  description = "John Doe's Personal blog about everything" # Description of your site
+  subtitle = "Data Science Blog" # Subtitle of your site
+  description = "Savvy Blogs" # Description of your site
   opengraph = true
   twitter_cards = false
   readmore = false # Show "Read more" button in list if true
