--- a/config.toml
+++ b/config.toml
@@ -25,6 +25,8 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
   authorbox = true
   post_navigation = true
   post_meta = ["date", "categories"] # Order of post meta information
+ # mainSections = ["post", "blog", "news"]
+ # menu = [main, side, footer]
 
 [Params.sidebar]
   home = "right"   # Configure layout for home page
@@ -36,3 +38,10 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 [Params.widgets]
   recent_num = 5 # Set the number of articles in the "Recent articles" widget
   tags_counter = false # Enable counter for each tag in "Tags" widget (disabled by default)
+  
+[Params.widgets.social]
+  # Enable parts of social widget
+  twitter = "username"
+  linkedin = "username"
+  github = "username"
+  email = "example@example.com"
